k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: voting-app
spec:
  selector:
    app: postgres
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
