k8s/vote-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote-service
  namespace: voting-app
spec:
  type: ClusterIP
  selector:
    app: vote
  ports:
    - port: 8080
      targetPort: 8080
